--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -9,7 +9,7 @@
           %li= msg
 
   .form-group
-    = f.input :image, input_html: { class: 'form-control'}
+    = f.input :image, input_html: { hidden: true }
 
   .form-group
     = f.input :title, input_html: { class: 'form-control'}
