--- a/app/views/pins/edit.html.haml
+++ b/app/views/pins/edit.html.haml
@@ -1,5 +1,5 @@
 .col-md-6.col-md-offset-3
   %h1 Edit Pin
-  = image_tag @pin.image
+  = image_tag @pin.image, size: "300x300"
   = render 'form'
   = link_to "Cancel", pin_path
